--- a/package.json
+++ b/package.json
@@ -7,13 +7,57 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/bottom-tabs": "^7.8.11",
+    "@react-navigation/native": "^7.1.24",
+    "@react-navigation/native-stack": "^7.8.5",
+    "@shopify/flash-list": "^2.2.0",
+    "@shopify/react-native-skia": "^2.4.7",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.13.2",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "@react-native/new-app-screen": "0.81.4",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-actions-sheet": "^10.1.0",
+    "react-native-audio-recorder-player": "^4.5.0",
+    "react-native-blob-courier": "^5.0.2",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-immersive-mode": "^2.0.2",
+    "react-native-keyboard-controller": "^1.20.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-mmkv": "^4.1.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-nitro-modules": "^0.31.10",
+    "react-native-pager-view": "^7.0.2",
+    "react-native-permissions": "^5.4.4",
+    "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "3.19.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-share": "^12.2.1",
+    "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-turbo-image": "^1.23.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.18.0",
+    "react-native-video-controls": "^2.8.1",
+    "react-native-view-shot": "^4.0.3",
+    "react-native-vision-camera": "^4.7.3",
+    "react-native-vision-camera-text-recognition": "^3.1.1",
+    "react-native-worklets-core": "^1.6.2",
+    "rn-fetch-blob": "^0.12.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -31,6 +75,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.1",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
