--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,4 +138,8 @@ project.ext.vectoricons = [
     ]
 ]
 
+project.ext.react = [
+    enableHermes: true
+]
+
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
