--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.2.8",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.81.4",
@@ -31,6 +32,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.29.1",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^8.2.1",
     "react-native-immersive-mode": "^2.0.2",
     "react-native-keyboard-controller": "^1.20.1",
@@ -48,6 +50,7 @@
     "react-native-screens": "^4.18.0",
     "react-native-share": "^12.2.1",
     "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-table-component": "^1.2.2",
     "react-native-turbo-image": "^1.23.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.18.0",
