--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.13.2",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "moti": "^0.30.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-actions-sheet": "^10.1.0",
