--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,6 +107,11 @@ android {
     }
 }
 
+configurations {
+    all {
+    }
+}
+
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
@@ -116,6 +121,12 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+
+    def media3_version = "1.8.0"
+    implementation "androidx.media3:media3-transformer:${media3_version}"
+    implementation "androidx.media3:media3-effect:${media3_version}"
+    implementation "androidx.media3:media3-common:${media3_version}"
 }
 
 project.ext.vectoricons = [
