--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
     "@shopify/react-native-skia": "^2.4.7",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^6.6.8",
+    "@zegocloud/zego-uikit-rn": "^2.19.1",
     "axios": "^1.13.2",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~54.0.0",
     "moti": "^0.30.0",
     "react": "19.1.0",
+    "react-delegate-component": "^1.0.0",
     "react-native": "0.81.4",
     "react-native-actions-sheet": "^10.1.0",
     "react-native-audio-recorder-player": "^4.5.0",
     "react-native-awesome-slider": "^2.9.0",
     "react-native-blob-courier": "^5.0.2",
+    "react-native-device-info": "^15.0.1",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.29.1",
@@ -40,6 +45,7 @@
     "react-native-image-colors": "^2.5.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-immersive-mode": "^2.0.2",
+    "react-native-keep-awake": "4.0.0",
     "react-native-keyboard-controller": "^1.20.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-material-menu": "^2.0.0",
@@ -52,7 +58,7 @@
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "3.19.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
+    "react-native-screens": "^4.19.0",
     "react-native-share": "^12.2.1",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-sound": "^0.13.0",
@@ -70,6 +76,8 @@
     "react-native-vision-camera-text-recognition": "^3.1.1",
     "react-native-worklets-core": "^1.6.2",
     "rn-fetch-blob": "^0.12.0",
+    "zego-express-engine-reactnative": "^3.22.0",
+    "zego-zim-react-native": "^2.24.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
